log
Thu 09 May 2024 01:46:42 PM UTC: 
 tests:  1|8
total_score: 0/70
4f3a9b1
Thu 09 May 2024 02:53:42 PM UTC: 
 treemap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
d445ab6
Thu 09 May 2024 06:27:14 PM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  11|6
total_score: 15/70
12af9bd
Thu 09 May 2024 06:27:43 PM UTC: 
 treemap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
a68f527
Thu 09 May 2024 06:29:18 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 15/70
e7b7a8d
Thu 09 May 2024 06:38:47 PM UTC: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  12|5
total_score: 15/70
629deb9
Thu 09 May 2024 06:41:57 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  14|5
total_score: 15/70
7375207
Thu 09 May 2024 06:42:29 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  14|5
total_score: 15/70
1a8b6a0
Thu 09 May 2024 06:43:51 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  14|5
total_score: 15/70
a84d8c5
Thu 09 May 2024 06:44:27 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  14|5
total_score: 15/70
f548cab
Thu 09 May 2024 07:38:21 PM UTC: 
 treemap.c | 31 ++++---------------------------
 1 file changed, 4 insertions(+), 27 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:47:12: error: ‘TreeNode’ has no member named ‘key’
   47 |     newNode->key = key;
      |            ^~
treemap.c:48:12: error: ‘TreeNode’ has no member named ‘value’
   48 |     newNode->value = value;
      |            ^~
Compilation failed
379ff3b
Thu 09 May 2024 07:46:49 PM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:15: error: ‘true’ undeclared (first use in this function)
   51 |         while(true) {
      |               ^~~~
treemap.c:5:1: note: ‘true’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    4 | #include "treemap.h"
  +++ |+#include <stdbool.h>
    5 | 
treemap.c:51:15: note: each undeclared identifier is reported only once for each function it appears in
   51 |         while(true) {
      |               ^~~~
treemap.c:53:9: error: expected expression before ‘}’ token
   53 |         }
      |         ^
treemap.c:53:9: error: ‘return’ with a value, in function returning void [-Werror=return-type]
treemap.c:45:6: note: declared here
   45 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:50:20: error: unused variable ‘current’ [-Werror=unused-variable]
   50 |         TreeNode * current = tree->root;
      |                    ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c8a7c2f
Thu 09 May 2024 07:47:06 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:15: error: ‘true’ undeclared (first use in this function)
   51 |         while(true) {
      |               ^~~~
treemap.c:5:1: note: ‘true’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    4 | #include "treemap.h"
  +++ |+#include <stdbool.h>
    5 | 
treemap.c:51:15: note: each undeclared identifier is reported only once for each function it appears in
   51 |         while(true) {
      |               ^~~~
treemap.c:50:20: error: unused variable ‘current’ [-Werror=unused-variable]
   50 |         TreeNode * current = tree->root;
      |                    ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
86168db
Thu 09 May 2024 07:56:26 PM UTC: 
 treemap.c | 26 ++++++++++++++++++++++----
 1 file changed, 22 insertions(+), 4 deletions(-)
 tests:  14|5
total_score: 15/70
ee50b6a
Thu 09 May 2024 07:59:00 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  14|5
total_score: 15/70
85efbf8
Thu 09 May 2024 08:01:31 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  14|5
total_score: 15/70
70d2105
Thu 09 May 2024 08:06:00 PM UTC: 
 treemap.c | 31 +++++++++++++++----------------
 1 file changed, 15 insertions(+), 16 deletions(-)
 tests:  15|4
total_score: 25/70
0f4668c
Thu 09 May 2024 08:08:51 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  17|3
total_score: 30/70
b7ee236
Thu 09 May 2024 08:16:13 PM UTC: 
 treemap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  0|0
3c5a144
Thu 09 May 2024 08:19:42 PM UTC: 
 treemap.c | 27 +--------------------------
 1 file changed, 1 insertion(+), 26 deletions(-)
 tests:  17|3
total_score: 30/70
c85c6c5
Thu 09 May 2024 08:30:08 PM UTC: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:103:24: error: unused variable ‘successor’ [-Werror=unused-variable]
  103 |             TreeNode * successor = minimum(node->right);
      |                        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8588d83
Fri 10 May 2024 11:57:26 PM UTC: 
 treemap.c | 24 ++++++++----------------
 1 file changed, 8 insertions(+), 16 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:91:15: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   91 |     TreeNode* parent = NULL;
      |               ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
e0fe1f6
Fri 10 May 2024 11:57:50 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  17|3
total_score: 30/70
640e4da
Sat 11 May 2024 12:19:06 AM UTC: 
 treemap.c | 48 +++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 41 insertions(+), 7 deletions(-)
 tests:  0|0
a88f172
Sat 11 May 2024 12:28:15 AM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  18|3
total_score: 35/70
ca52d6c
Sat 11 May 2024 12:40:51 AM UTC: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 35/70
6c57715
Sat 11 May 2024 12:42:30 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  18|3
total_score: 35/70
623dcbd
